# nyctaxiELTGCP

./: .gcloudignore  .gitignore  MODEL  README.md  cloudbuild_build.yaml  cloudbuild_create.yaml  pyproject.toml
cloudrundbt/: Dockerfile  cloudbuild.yaml  pyproject.toml
cloudrundbt/dbt/: dbt_project.yml  packages.yml  profiles.yml
cloudrundbt/dbt/models/: source.yml
cloudrundbt/dbt/models/gold/: dim_date.sql  dim_locations.sql  dim_taxi_types.sql  fct_trip.sql
cloudrundbt/dbt/models/silver/: sl_trip_data.sql
dataflow/: Dockerfile  cloudbuild.yaml  metadata.json  requirements.txt  transform_data.py
dbt/: .user.yml  profiles.yml
dbt/models/: source.yml
dbt/models/bronze/: green_taxi_raw.sql
dbt/models/gold/: dim_rate_types.sql  fct_trip.sql
dbt/models/silver/: sl_trip_data.sql
models/bronze/: green_taxi_raw.sql
models/gold/: dim_date.sql  dim_locations.sql  dim_taxi_types.sql
models/silver/: sl_trip_data.sql
scripts/: cloudbuild.yaml  download_data.py  main.py  package.json  requirements.txt  serverless.yml
scripts/data-import-fn/: main.py  requirements.txt
taxi_data/dbt/: dbt_project.yml
taxi_data/dbt/models/: source.yml
taxi_data/dbt/models/bronze/: yellow_taxi_raw.sql
taxi_data/dbt/models/gold/: dim_payments.sql  dim_rate_types.sql  dim_time.sql  fct_trip.sql  trip_metrics.sql
taxi_data/dbt/models/silver/: sl_trip_data.sql
taxi_data/notebooks/: pandas_analysis.ipynb
taxi_data/scripts/: download_data.py
