[project]
name = "nyc-taxi-project"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dash>=2.18.2",
    "dbt-core>=1.9.2",
    "dbt-duckdb>=1.9.2",
    "duckdb>=1.2.0",
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "polars[pyarrow]>=1.24.0",
    "pyspark>=3.5.5",
]
