[project]
name = "nyc-taxi-project"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "awscli>=1.39.0",
    "boto3>=1.38.0",
    "dbt-core>=1.9.2",
    "dbt-duckdb>=1.9.2",
    "duckdb>=1.2.0",
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "polars[pyarrow]>=1.24.0",
]
