[project]
name = "nyc-taxi-project"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dbt-bigquery>=1.9.2",
    "dbt-core>=1.9.2",
    "httpx>=0.28.1",
    "pandas>=2.2.3",
    "google-cloud-run>=0.10.18,<0.11.0",
    "google-cloud-bigquery>=3.34.0",
    "apache-beam[gcp]>=2.66.0",
]
